[feat] 캐시 설정 개선 및 CachePort 리팩토링 (#107)
* feat: TMDB OpenAPI 연동 인프라 및 응답 모델 추가

* feat: Genre 도메인 추가

* feat: 외부 콘텐츠 식별자 매핑 도메인 추가

* feat: 배치 모듈 설정 & TMDB Genre 동기화 배치 잡 구현

* feat: TMDB 인기 콘텐츠 동기화 배치 추가

* chore: 환경별 YAML 설정 정리 및 로컬 프로파일 추가

* refactor: 디렉토리 이동

* feat: 장르 기반 태그 연동 및 TMDB 데이터 동기화 개선

- GenreRepository에 복수 TMDB ID로 조회 메서드 추가
- TMDB 인기 콘텐츠 업서트 시 장르 데이터를 태그로 변환 및 저장 로직 추가
- 스케줄러 및 배치 관련 설정 클래스 추가
- TMDB WebClient 설정 클래스 및 관련 설정 개선
- 패키지 구조 정리 및 관련 디렉토리 리팩토링

* feat: 새 버전 정적 리소스 적용

* refactor: 중복되는 스케줄러 및 도메인 서비스 설정 클래스 제거

* refactor: 중복 TMDB WebClient 설정 클래스 삭제

* remove: 이전 버전 정적 리소스 에셋 삭제

* fix: update favicon and static asset references in index.html

* style: remove unnecessary blank line in GenreRepositoryImpl

* fix: rename THE_SPORTS to TSDB in ContentExternalProvider enum

* feat: add JPA-based LeagueRepository implementation

- Implemented LeagueRepositoryImpl with CRUD and utility methods
- Added LeagueEntity, JpaLeagueRepository, and LeagueEntityMapper classes

* feat: add LeagueModel and LeagueRepository interfaces to domain layer

- Introduced LeagueModel with builder pattern for creating league entities
- Added LeagueRepository for basic league persistence operations

* feat: add TsdbProperties for TSDB configuration

- Added `TsdbProperties` class to manage TSDB API and image configurations
- Updated `openapi.yaml` to include `tsdb` properties

* feat: add TSDB client integration with league and event fetch support

- Implemented `TsdbClient` for interacting with TSDB API
- Added models: `LeagueResponse`, `LeagueItem`, `EventResponse`, and `EventItem`
- Created `TsdbWebClientConfig` for WebClient setup with TSDB properties

* feat: add TSDB batch processing for league and event synchronization

- Introduced services: `TsdbLeagueSyncService`, `TsdbEventUpsertService`, and `TsdbLeagueEventCollectService` for syncing leagues and events from TSDB.
- Added jobs: `TsdbLeagueSyncJob` and `TsdbLeagueEventJob` to trigger sync operations.
- I